--- a/src/components/molecules/Book/Book.scss
+++ b/src/components/molecules/Book/Book.scss
@@ -1,29 +1,25 @@
 .Book {
   align-items: start;
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
   grid-template-areas:
-    'cover title title'
-    'cover author author'
-    'cover date date'
-    'cover user user'
-    'cover amazon amazon'
-    'cover . .'
-    'rating rating rating';
+    'cover info'
+    'cover user'
+    'cover amazon'
+    'cover .'
+    'rating rating';
   justify-content: space-evenly;
   margin: 0 auto 60px;
+  max-width: 1200px;
 
   @media (min-width: 768px) {
     margin: 32px auto;
   }
 
   @media (min-width: 768px) {
-    grid-template-columns: 50px 155px 300px 100px;
+    grid-template-columns: 1fr 2fr minmax(280px, 2fr) 1fr;
     grid-template-areas:
-      'amazon cover title user'
-      'amazon cover subtitle user'
-      'amazon cover author user'
-      'amazon cover date user'
+      'amazon cover info   user'
       'amazon cover rating user';
     justify-content: space-evenly;
   }
