--- a/src/views/Home.scss
+++ b/src/views/Home.scss
@@ -10,7 +10,7 @@
     align-content: center;
     display: flex;
     justify-content: center;
-    padding: 0;
+    padding: 10px 0;
     flex-wrap: wrap;
 
     @media (min-width: 768px) {
